Dark Mode correctly working

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1033,7 +1033,7 @@ textarea {
   border-radius: 0.375em;
   border: none;
   border: solid 1px rgba(210, 215, 217, 0.75);
-  color: inherit;
+  color: #3d4449;
   display: block;
   outline: 0;
   padding: 0 1em;
@@ -2309,6 +2309,37 @@ button,
 
 /* Dark mode styles */
 body.dark-mode {
-  background-color: #222; /* Set your dark mode background color */
+  background-color: #161616; /* Set your dark mode background color */
   color: #fff; /* Set your dark mode text color */
+}
+
+/* Dark mode styles for the navbar */
+body.dark-mode #sidebar {
+  background-color: #020202; /* Set your dark mode navbar background color */
+  color: #fff; /* Set your dark mode navbar text color */
+}
+
+/* Dark mode styles for heading elements */
+body.dark-mode h1,
+body.dark-mode h2,
+body.dark-mode h3,
+body.dark-mode h4,
+body.dark-mode h5,
+body.dark-mode h6 {
+  color: #fff; /* Dark mode text color for heading elements */
+}
+
+body.dark-mode textarea {
+  background-color: #222222; /* Set your dark mode background color */
+  color: #fff; /* Set your dark mode text color */
+}
+
+body.dark-mode #menu ul,
+body.dark-mode label,
+body.dark-mode table th  {
+  color: #fff; /* Set your dark mode text color */
+}
+
+body.dark-mode select option {
+  color: #000; /* Set a different text color for dropdown menu options in dark mode */
 }
